force-app/main/default/objects/Account/fields/abc__c.field-meta.xml
<CustomField>
    <fullName>abc__c</fullName>
    <label>abc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
            </value>
            <value>
                <fullName>b</fullName>
            </value>
            <value>
                <fullName>c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>