force-app/main/default/objects/Account/fields/up_date_Filed1__c.field-meta.xml
<CustomField>
    <fullName>up_date_Filed1__c</fullName>
    <formula>Update_Field__c +1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>up[date Filed1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>