force-app/main/default/objects/Account/recordTypes/NewAccountRecordType.recordType-meta.xml
<RecordType>
    <fullName>NewAccountRecordType</fullName>
    <active>true</active>
    <label>NewAccountRecordType</label>
</RecordType>