force-app/main/default/objects/Account/listViews/sscascs.listView-meta.xml
<ListView>
    <fullName>sscascs</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>sscas</label>
    <language>en_US</language>
    <sharedTo>
        <group>Test1</group>
    </sharedTo>
</ListView>